--- a/src/styles/postsummary.css
+++ b/src/styles/postsummary.css
@@ -1,6 +1,8 @@
 .user-block{
     display:flex;
     flex-direction:row;
+    padding:10px;
+    box-shadow: 2px 2px 2px 2px;
 }
 .post-summary{
     margin: 10px;
